--- a/ios/StatusIm/Info.plist
+++ b/ios/StatusIm/Info.plist
@@ -59,6 +59,7 @@
 	<key>UIAppFonts</key>
 	<array>
 		<string>SF-UI-Text-Semibold.otf</string>
+		<string>status-icons.ttf</string>
 		<string>SF-UI-Text-Bold.otf</string>
 		<string>SF-UI-Text-Regular.otf</string>
 		<string>SF-UI-Text-Medium.otf</string>
