--- a/modules/react-native-status/android/build.gradle
+++ b/modules/react-native-status/android/build.gradle
@@ -15,5 +15,5 @@ android {
 dependencies {
     compile 'com.facebook.react:react-native:+'
     compile 'com.instabug.library:instabug:3+'
-    compile(group: 'status-im', name: 'status-go', version: 'jail-signals-gfe007d5', ext: 'aar')
+    compile(group: 'status-im', name: 'status-go', version: 'hackaton-g5031f0', ext: 'aar')
 }
